--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3870366586"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?80221687" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4213895321"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?86156934" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -30,10 +30,11 @@ var __adobewebfontsappname__ = "muse";
 
   <div class="clearfix" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
-    <div class="colelem" id="u977"><!-- simple frame --></div>
-    <div class="clearfix pinned-colelem" id="u978"><!-- group -->
+    <div class="clearfix pinned-colelem" id="u1412"><!-- group -->
      <div class="clearfix" id="u903"><!-- group -->
-      <div id="u902"><!-- simple frame --></div>
+      <div class="clip_frame" id="u1208"><!-- image -->
+       <img class="block" id="u1208_img" src="images/matt-logo.png" alt="" width="220" height="40"/>
+      </div>
       <nav class="MenuBar clearfix" id="menuu873"><!-- horizontal box -->
        <div class="MenuItemContainer clearfix grpelem" id="u881"><!-- vertical box -->
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u882" href="index.html#matthew"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u884-4"><!-- content --><p>Matthew</p></div></a>
@@ -52,25 +53,33 @@ var __adobewebfontsappname__ = "muse";
       </div>
      </div>
     </div>
-    <div class="clearfix colelem" id="u907"><!-- group -->
-     <div class="rgba-background clearfix grpelem" id="u938"><!-- group -->
-      <div class="grpelem" id="u937"><!-- simple frame --></div>
-      <nav class="MenuBar clearfix grpelem" id="menuu908"><!-- horizontal box -->
-       <div class="MenuItemContainer clearfix grpelem" id="u916"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u917" href="index.html#matthew"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u919-4"><!-- content --><p>Matthew</p></div></a>
+    <div class="clearfix colelem" id="pmatthew"><!-- group -->
+     <a class="anchor_item grpelem" id="matthew"></a>
+     <div class="grpelem" id="u977"><!-- simple frame --></div>
+    </div>
+    <div class="clearfix colelem" id="u1218"><!-- group -->
+     <div class="clearfix grpelem" id="u907"><!-- group -->
+      <div class="rgba-background clearfix grpelem" id="u938"><!-- group -->
+       <nav class="MenuBar clearfix grpelem" id="menuu908"><!-- horizontal box -->
+        <div class="MenuItemContainer clearfix grpelem" id="u916"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u917" href="index.html#matthew"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u919-4"><!-- content --><p>Matthew</p></div></a>
+        </div>
+        <div class="MenuItemContainer clearfix grpelem" id="u909"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u912" href="index.html#novels"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u913-4"><!-- content --><p>Novels</p></div></a>
+        </div>
+        <div class="MenuItemContainer clearfix grpelem" id="u923"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u924" href="index.html#media"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u926-4"><!-- content --><p>Media</p></div></a>
+        </div>
+       </nav>
+       <a class="nonblock nontext clip_frame grpelem" id="u932" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- image --><img class="block" id="u932_img" src="images/fb-f-logo__blue_50.png" alt="" width="40" height="40"/></a>
+       <a class="nonblock nontext clip_frame grpelem" id="u930" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- image --><img class="block" id="u930_img" src="images/goodreads_icon_30x30.png" alt="" width="40" height="40"/></a>
+       <div class="clip_frame grpelem" id="u934"><!-- image -->
+        <img class="block" id="u934_img" src="images/mail.jpg" alt="" width="39" height="39"/>
        </div>
-       <div class="MenuItemContainer clearfix grpelem" id="u909"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u912" href="index.html#novels"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u913-4"><!-- content --><p>Novels</p></div></a>
-       </div>
-       <div class="MenuItemContainer clearfix grpelem" id="u923"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u924" href="index.html#media"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u926-4"><!-- content --><p>Media</p></div></a>
-       </div>
-      </nav>
-      <a class="nonblock nontext clip_frame grpelem" id="u932" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- image --><img class="block" id="u932_img" src="images/fb-f-logo__blue_50.png" alt="" width="40" height="40"/></a>
-      <a class="nonblock nontext clip_frame grpelem" id="u930" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- image --><img class="block" id="u930_img" src="images/goodreads_icon_30x30.png" alt="" width="40" height="40"/></a>
-      <div class="clip_frame grpelem" id="u934"><!-- image -->
-       <img class="block" id="u934_img" src="images/mail.jpg" alt="" width="39" height="39"/>
       </div>
+     </div>
+     <div class="clip_frame grpelem" id="u1202"><!-- image -->
+      <img class="block" id="u1202_img" src="images/matt-logo.png" alt="" width="220" height="40"/>
      </div>
     </div>
     <div class="clearfix colelem" id="pu1049"><!-- group -->
@@ -90,9 +99,10 @@ var __adobewebfontsappname__ = "muse";
        <div class="colelem" id="u779"><!-- simple frame --></div>
       </div>
      </div>
-     <a class="anchor_item grpelem" id="matthew"></a>
+     <a class="anchor_item grpelem" id="novels"></a>
     </div>
-    <div class="clearfix colelem" id="pu981"><!-- group -->
+    <div class="clearfix colelem" id="pmedia"><!-- group -->
+     <a class="anchor_item grpelem" id="media"></a>
      <div class="shadow grpelem" id="u981"><!-- simple frame -->
       <div class="_u981 f3s_top" id="_u981-f3s_top"></div>
       <div class="_u981 f3s_mid" id="_u981-f3s_mid"></div>
@@ -104,26 +114,19 @@ var __adobewebfontsappname__ = "muse";
       <div class="_u1050 f3s_bot" id="_u1050-f3s_bot"></div>
      </div>
      <div class="rgba-background clearfix grpelem" id="u973"><!-- group -->
-      <a class="anchor_item grpelem" id="novels"></a>
       <div class="clearfix grpelem" id="pu982-4"><!-- column -->
        <div class="clearfix colelem" id="u982-4"><!-- content -->
         <p>The Shade Trilogy</p>
        </div>
-       <div class="shadow clip_frame colelem" id="u989"><!-- image -->
-        <img class="block" id="u989_img" src="images/front%205x8%20300ppi.jpg" alt="" width="190" height="305"/>
-       </div>
+       <a class="nonblock nontext shadow clip_frame colelem" id="u989" href="the-shade.html"><!-- image --><img class="block" id="u989_img" src="images/front%205x8%20300ppi191x305.jpg" alt="" width="190" height="305"/></a>
       </div>
       <div class="clearfix grpelem" id="pu975-4"><!-- column -->
        <div class="clearfix colelem" id="u975-4"><!-- content -->
         <p>NOVELS</p>
        </div>
-       <div class="shadow clip_frame colelem" id="u995"><!-- image -->
-        <img class="block" id="u995_img" src="images/thecorruptfront%205x8%20300ppi.jpg" alt="" width="191" height="305"/>
-       </div>
+       <a class="nonblock nontext shadow clip_frame colelem" id="u995" href="the-corrupt.html"><!-- image --><img class="block" id="u995_img" src="images/thecorruptfront%205x8%20300ppi191x306.jpg" alt="" width="191" height="305"/></a>
       </div>
-      <div class="shadow clip_frame grpelem" id="u1001"><!-- image -->
-       <img class="block" id="u1001_img" src="images/front300dpi.jpg" alt="" width="190" height="305"/>
-      </div>
+      <a class="nonblock nontext shadow clip_frame grpelem" id="u1001" href="the-forgotten.html"><!-- image --><img class="block" id="u1001_img" src="images/front300dpi191x305.jpg" alt="" width="190" height="305"/></a>
      </div>
     </div>
     <div class="clearfix colelem" id="pu1047"><!-- group -->
@@ -143,32 +146,33 @@ var __adobewebfontsappname__ = "muse";
       <div class="_u1037 f3s_bot" id="_u1037-f3s_bot"></div>
      </div>
      <div class="rgba-background clearfix grpelem" id="u976"><!-- column -->
-      <div class="position_content" id="u976_position_content">
-       <a class="anchor_item colelem" id="media"></a>
-       <div class="clearfix colelem" id="u1038-4"><!-- content -->
-        <p>Media</p>
+      <div class="clearfix colelem" id="u1038-4"><!-- content -->
+       <p>Media</p>
+      </div>
+      <div class="clearfix colelem" id="pu1044-4"><!-- group -->
+       <div class="clearfix grpelem" id="u1044-4"><!-- content -->
+        <p>The Shade Trilogy on Facebook</p>
        </div>
-       <div class="clearfix colelem" id="pu1044-4"><!-- group -->
-        <div class="clearfix grpelem" id="u1044-4"><!-- content -->
-         <p>The Shade Trilogy on Facebook</p>
-        </div>
-        <div class="clearfix grpelem" id="u1048-4"><!-- content -->
-         <p>Matthew Tallman on Goodreads</p>
-        </div>
+       <div class="clearfix grpelem" id="u1048-4"><!-- content -->
+        <p>Matthew Tallman on Goodreads</p>
        </div>
-       <div class="clearfix colelem" id="pu1041"><!-- group -->
-        <div class="clearfix grpelem" id="u1041"><!-- group -->
-         <div class="grpelem" id="u1045"><!-- custom html -->
-          <div class="fb-page" data-href="https://www.facebook.com/TheShadeBook/timeline" data-width="490" data-height="550" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/TheShadeBook/timeline"><a href="https://www.facebook.com/TheShadeBook/timeline">The Shade Trilogy</a></blockquote></div></div>
+      </div>
+      <div class="clearfix colelem" id="pu1041"><!-- group -->
+       <div class="clearfix grpelem" id="u1041"><!-- group -->
+        <div class="grpelem" id="u1045"><!-- custom html -->
+         <div class="fb-page" data-href="https://www.facebook.com/TheShadeBook/timeline" data-width="490" data-height="550" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/TheShadeBook/timeline"><a href="https://www.facebook.com/TheShadeBook/timeline">The Shade Trilogy</a></blockquote></div></div>
 </div>
-        </div>
-        <div class="grpelem" id="u1042"><!-- simple frame --></div>
        </div>
+       <div class="grpelem" id="u1042"><!-- simple frame --></div>
       </div>
      </div>
     </div>
     <div class="verticalspacer"></div>
-    <div class="rgba-background rounded-corners colelem" id="u488"><!-- simple frame --></div>
+    <div class="rgba-background rounded-corners clearfix colelem" id="u488"><!-- group -->
+     <div class="clearfix grpelem" id="u1414-4"><!-- content -->
+      <p>Web Design by Christopher Dolence</p>
+     </div>
+    </div>
     <div class="colelem" id="u1019"><!-- custom html -->
      <div id="fb-root"></div>
 <script>(function(d, s, id) {
