--- a/the-forgotten.html
+++ b/the-forgotten.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "the-forgotten.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "the-forgotten.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,12 +11,18 @@
   <title>The Forgotten</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/the-forgotten.css?4124694200" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4213895321"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?14300186"/>
+  <link rel="stylesheet" type="text/css" href="css/the-forgotten.css?4146523637" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
+var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
+  <script type="text/javascript">
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/double-pica-small-caps:n4:all.js" type="text/javascript">\x3C/script>');
+</script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?4241844378" type="text/javascript"></script>
   <![endif]-->
@@ -24,7 +30,68 @@
  <body>
 
   <div class="clearfix" id="page"><!-- column -->
+   <div class="clip_frame colelem" id="u1406"><!-- image -->
+    <img class="block" id="u1406_img" src="images/forgotten_long.jpg" alt="" width="370" height="138"/>
+   </div>
+   <div class="clearfix colelem" id="pu1166"><!-- group -->
+    <div class="clip_frame grpelem" id="u1166"><!-- image -->
+     <img class="block" id="u1166_img" src="images/back.png" alt="" width="110" height="50"/>
+    </div>
+    <div class="clearfix grpelem" id="u1159-4"><!-- content -->
+     <p>Back</p>
+    </div>
+    <a class="nonblock nontext grpelem" id="u1160" href="index.html"><!-- simple frame --></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u1178" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- image --><img class="block" id="u1178_img" src="images/fb-f-logo__blue_50.png" alt="" width="40" height="40"/></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u1180" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- image --><img class="block" id="u1180_img" src="images/goodreads_icon_30x30.png" alt="" width="40" height="40"/></a>
+    <div class="clip_frame grpelem" id="u1182"><!-- image -->
+     <img class="block" id="u1182_img" src="images/mail.jpg" alt="" width="39" height="39"/>
+    </div>
+   </div>
+   <div class="clearfix colelem" id="pu1298"><!-- group -->
+    <div class="shadow grpelem" id="u1298"><!-- simple frame -->
+     <div class="_u1298 f3s_top" id="_u1298-f3s_top"></div>
+     <div class="_u1298 f3s_mid" id="_u1298-f3s_mid"></div>
+     <div class="_u1298 f3s_bot" id="_u1298-f3s_bot"></div>
+    </div>
+    <div class="rgba-background clearfix grpelem" id="u1299"><!-- group -->
+     <div class="clearfix grpelem" id="u1326-4"><!-- content -->
+      <p id="u1326-2">James Langley is searching for the man who stole his life. Three long years after he was forced to abandon his hometown of Eugene, he and his ghostly companion Virgil, still hunt the wicked Doctor Edwin Burke. Granted superhuman power by The Shade—a plain of existence between life and death—they protect the world of humans against the nightmares that lie below. However, when Burke resurfaces, and a growing number of Shade dwelling creatures begin to surround the city; James and Virgil are called back to defend the quiet city of Eugene. Though the motive for the gathering is unknown to them, James believes it to be a sign that The Speakers Burke heralded, are organizing their forces for war. Marred by his past and haunted by the growing darkness within him, James must return to protect his home from the coming tide of vicious monsters. Get ready for the supernatural sequel to The Shade. A world where you fight the shadows, or are consumed by them.</p>
+     </div>
+    </div>
+    <div class="SlideShowWidget clearfix grpelem" id="slideshowu1300"><!-- none box -->
+     <div class="popup_anchor" id="u1312popup">
+      <div class="SlideShowContentPanel clearfix" id="u1312"><!-- stack box -->
+       <img class="SSSlide ImageInclude grpelem" id="u1348" alt="" src="images/blank.gif" data-width="499" data-height="460" width="499" height="460" data-src="images/forgotten-u1348.png"/><!-- rasterized frame -->
+       <div class="SSSlide invi shadow block grpelem" id="u1315"><!-- image -->
+        <img class="shadow ImageInclude" id="u1315_img" data-src="images/front300dpi.jpg" src="images/blank.gif" alt="" data-width="280" data-height="449"/>
+       </div>
+       <div class="SSSlide invi shadow block grpelem" id="u1357"><!-- image -->
+        <img class="shadow ImageInclude" id="u1357_img" data-src="images/fullsleevewithbleed300dpi.jpg" src="images/blank.gif" alt="" data-width="490" data-height="356"/>
+       </div>
+      </div>
+     </div>
+     <div class="popup_anchor" id="u1319popup">
+      <div class="SSSlideLinks clearfix" id="u1319"><!-- horizontal-rows box -->
+       <div class="SSSlideLink clip_frame grpelem" id="u1351"><!-- image -->
+        <img class="block" id="u1351_img" src="images/forgotten45x45.png" alt="" width="45" height="45"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u1324"><!-- image -->
+        <img class="block" id="u1324_img" src="images/front300dpi29x45.jpg" alt="" width="28" height="45"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u1360"><!-- image -->
+        <img class="block" id="u1360_img" src="images/fullsleevewithbleed300dpi60x44.jpg" alt="" width="60" height="44"/>
+       </div>
+      </div>
+     </div>
+    </div>
+   </div>
+   <a class="nonblock nontext clip_frame colelem" id="u1295" href="http://www.amazon.com/The-Forgotten-Shade-Trilogy-Book-ebook/dp/B00UW6QJXE/ref=pd_rhf_dp_p_img_1?ie=UTF8&amp;refRID=0EX06CCH89DY3FNV6MKW"><!-- image --><img class="block" id="u1295_img" src="images/amazon-logo_grey.png" alt="" width="207" height="100"/></a>
    <div class="verticalspacer"></div>
+   <div class="clearfix colelem" id="u488"><!-- group -->
+    <div class="clearfix grpelem" id="u1414-4"><!-- content -->
+     <p>Web Design by Christopher Dolence</p>
+    </div>
+   </div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
@@ -34,6 +101,10 @@
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script src="scripts/museutils.js?4136605575" type="text/javascript"></script>
+  <script src="scripts/webpro.js?420478120" type="text/javascript"></script>
+  <script src="scripts/musewpslideshow.js?480958572" type="text/javascript"></script>
+  <script src="scripts/jquery.museoverlay.js?184401257" type="text/javascript"></script>
+  <script src="scripts/touchswipe.js?60020316" type="text/javascript"></script>
   <script src="scripts/jquery.watch.js?172956391" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -43,6 +114,7 @@ for(var c=$(".version"),d=0;d<Muse.assets.required.length;){var f=Muse.assets.re
 typeof $!="undefined"?Muse.assets.required.splice(d,1):d++;break;default:throw Error("Unsupported file type: "+g);}}c.remove();if(Muse.assets.outOfDate.length||Muse.assets.required.length)c="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",(d=location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi))&&Muse.assets.outOfDate.length&&(c+="\nOut of date: "+Muse.assets.outOfDate.join(",")),d&&Muse.assets.required.length&&(c+="\nMissing: "+Muse.assets.required.join(",")),alert(c)})()})();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.initWidget('#slideshowu1300', function(elem) { $(elem).data('widget', new WebPro.Widget.ContentSlideShow(elem, {autoPlay:false,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false})); });/* #slideshowu1300 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
