--- a/the-shade.html
+++ b/the-shade.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "the-shade.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "the-shade.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,28 +11,87 @@
   <title>The Shade</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/the-shade.css?4112523222" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4213895321"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?14300186"/>
+  <link rel="stylesheet" type="text/css" href="css/the-shade.css?3924265158" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
+var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
+  <script type="text/javascript">
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/double-pica-small-caps:n4:all.js" type="text/javascript">\x3C/script>');
+</script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?4241844378" type="text/javascript"></script>
   <![endif]-->
    </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- column -->
-   <div class="rgba-background clearfix colelem" id="u494"><!-- column -->
-    <div class="shadow clip_frame colelem" id="u506"><!-- image -->
-     <img class="block" id="u506_img" src="images/ts%20fb%20cover.jpg" alt="" width="720" height="266"/>
+  <div class="rounded-corners clearfix" id="page"><!-- column -->
+   <div class="clip_frame colelem" id="u1051"><!-- image -->
+    <img class="block" id="u1051_img" src="images/ts%20fb%20cover.jpg" alt="" width="380" height="140"/>
+   </div>
+   <div class="clearfix colelem" id="pu1166"><!-- group -->
+    <div class="clip_frame grpelem" id="u1166"><!-- image -->
+     <img class="block" id="u1166_img" src="images/back.png" alt="" width="110" height="50"/>
     </div>
-    <div class="rgba-background clearfix colelem" id="u495-4"><!-- content -->
-     <p id="u495-2">James Langley's life is over. After an automobile accident leaves him comatose, James' body lies vulnerable in a hospital bed. However, his mind is lost, drifting between life and death, into The Shade. Trapped in a world shrouded by the unknown, he meets Virgil, a mysterious stranger that informs him that his car wreck was no accident; that the man responsible has imprisoned them both, intent on keeping them there. Together they must race against time to get James back to his body in the real world before he becomes the next victim of a malevolent psychopath. Enter the world of The Shade, where the boundaries of the human psyche are pushed to their limits and survival is not guaranteed. A place where death isn't the end, but only the beginning.</p>
+    <div class="clearfix grpelem" id="u1159-4"><!-- content -->
+     <p>Back</p>
+    </div>
+    <a class="nonblock nontext grpelem" id="u1160" href="index.html"><!-- simple frame --></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u1178" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- image --><img class="block" id="u1178_img" src="images/fb-f-logo__blue_50.png" alt="" width="40" height="40"/></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u1180" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- image --><img class="block" id="u1180_img" src="images/goodreads_icon_30x30.png" alt="" width="40" height="40"/></a>
+    <div class="clip_frame grpelem" id="u1182"><!-- image -->
+     <img class="block" id="u1182_img" src="images/mail.jpg" alt="" width="39" height="39"/>
     </div>
    </div>
+   <div class="clearfix colelem" id="pu1165"><!-- group -->
+    <div class="shadow grpelem" id="u1165"><!-- simple frame -->
+     <div class="_u1165 f3s_top" id="_u1165-f3s_top"></div>
+     <div class="_u1165 f3s_mid" id="_u1165-f3s_mid"></div>
+     <div class="_u1165 f3s_bot" id="_u1165-f3s_bot"></div>
+    </div>
+    <div class="rgba-background clearfix grpelem" id="u494"><!-- group -->
+     <div class="clearfix grpelem" id="u495-4"><!-- content -->
+      <p id="u495-2">James Langley's life is over. After an automobile accident leaves him comatose, James' body lies vulnerable in a hospital bed. However, his mind is lost, drifting between life and death, into The Shade. Trapped in a world shrouded by the unknown, he meets Virgil, a mysterious stranger that informs him that his car wreck was no accident; that the man responsible has imprisoned them both, intent on keeping them there. Together they must race against time to get James back to his body in the real world before he becomes the next victim of a malevolent psychopath. Enter the world of The Shade, where the boundaries of the human psyche are pushed to their limits and survival is not guaranteed. A place where death isn't the end, but only the beginning.</p>
+     </div>
+    </div>
+    <div class="SlideShowWidget clearfix grpelem" id="slideshowu1057"><!-- none box -->
+     <div class="popup_anchor" id="u1066popup">
+      <div class="SlideShowContentPanel clearfix" id="u1066"><!-- stack box -->
+       <img class="SSSlide ImageInclude grpelem" id="u1108" alt="" src="images/blank.gif" data-width="499" data-height="460" width="499" height="460" data-src="images/shade-u1108.png"/><!-- rasterized frame -->
+       <div class="SSSlide invi shadow block grpelem" id="u1071"><!-- image -->
+        <img class="shadow ImageInclude" id="u1071_img" data-src="images/front%205x8%20300ppi.jpg" src="images/blank.gif" alt="" data-width="280" data-height="449"/>
+       </div>
+       <div class="SSSlide invi shadow block grpelem" id="u1123"><!-- image -->
+        <img class="shadow ImageInclude" id="u1123_img" data-src="images/full%20sleeve%20without%20bleed%20area%20300ppi%20-%20copy.jpg" src="images/blank.gif" alt="" data-width="480" data-height="364"/>
+       </div>
+      </div>
+     </div>
+     <div class="popup_anchor" id="u1059popup">
+      <div class="SSSlideLinks clearfix" id="u1059"><!-- horizontal-rows box -->
+       <div class="SSSlideLink clip_frame grpelem" id="u1111"><!-- image -->
+        <img class="block" id="u1111_img" src="images/shade45x45.png" alt="" width="45" height="45"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u1062"><!-- image -->
+        <img class="block" id="u1062_img" src="images/front%205x8%20300ppi29x45.jpg" alt="" width="28" height="45"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u1126"><!-- image -->
+        <img class="block" id="u1126_img" src="images/full%20sleeve%20without%20bleed%20area%20300ppi%20-%20copy60x46.jpg" alt="" width="60" height="45"/>
+       </div>
+      </div>
+     </div>
+    </div>
+   </div>
+   <a class="nonblock nontext clip_frame colelem" id="u1187" href="http://www.amazon.com/The-Shade-Trilogy-Volume/dp/099161920X"><!-- image --><img class="block" id="u1187_img" src="images/amazon-logo_grey.png" alt="" width="207" height="100"/></a>
    <div class="verticalspacer"></div>
+   <div class="clearfix colelem" id="u488"><!-- group -->
+    <div class="clearfix grpelem" id="u1414-4"><!-- content -->
+     <p>Web Design by Christopher Dolence</p>
+    </div>
+   </div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
@@ -42,6 +101,10 @@
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script src="scripts/museutils.js?4136605575" type="text/javascript"></script>
+  <script src="scripts/webpro.js?420478120" type="text/javascript"></script>
+  <script src="scripts/musewpslideshow.js?480958572" type="text/javascript"></script>
+  <script src="scripts/jquery.museoverlay.js?184401257" type="text/javascript"></script>
+  <script src="scripts/touchswipe.js?60020316" type="text/javascript"></script>
   <script src="scripts/jquery.watch.js?172956391" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -51,6 +114,7 @@ for(var c=$(".version"),d=0;d<Muse.assets.required.length;){var f=Muse.assets.re
 typeof $!="undefined"?Muse.assets.required.splice(d,1):d++;break;default:throw Error("Unsupported file type: "+g);}}c.remove();if(Muse.assets.outOfDate.length||Muse.assets.required.length)c="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",(d=location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi))&&Muse.assets.outOfDate.length&&(c+="\nOut of date: "+Muse.assets.outOfDate.join(",")),d&&Muse.assets.required.length&&(c+="\nMissing: "+Muse.assets.required.join(",")),alert(c)})()})();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.initWidget('#slideshowu1057', function(elem) { $(elem).data('widget', new WebPro.Widget.ContentSlideShow(elem, {autoPlay:false,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false})); });/* #slideshowu1057 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
