--- a/the-forgotten.html
+++ b/the-forgotten.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "the-forgotten.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "the-forgotten.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -12,8 +12,8 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4213895321"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?14300186"/>
-  <link rel="stylesheet" type="text/css" href="css/the-forgotten.css?4146523637" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?407598548"/>
+  <link rel="stylesheet" type="text/css" href="css/the-forgotten.css?242376949" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -23,9 +23,6 @@ var __adobewebfontsappname__ = "muse";
   <script type="text/javascript">
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/double-pica-small-caps:n4:all.js" type="text/javascript">\x3C/script>');
 </script>
-  <!--[if lt IE 9]>
-  <script src="scripts/html5shiv.js?4241844378" type="text/javascript"></script>
-  <![endif]-->
    </head>
  <body>
 
@@ -33,14 +30,11 @@ var __adobewebfontsappname__ = "muse";
    <div class="clip_frame colelem" id="u1406"><!-- image -->
     <img class="block" id="u1406_img" src="images/forgotten_long.jpg" alt="" width="370" height="138"/>
    </div>
-   <div class="clearfix colelem" id="pu1166"><!-- group -->
-    <div class="clip_frame grpelem" id="u1166"><!-- image -->
-     <img class="block" id="u1166_img" src="images/back.png" alt="" width="110" height="50"/>
-    </div>
+   <div class="clearfix colelem" id="pu1159-4"><!-- group -->
     <div class="clearfix grpelem" id="u1159-4"><!-- content -->
      <p>Back</p>
     </div>
-    <a class="nonblock nontext grpelem" id="u1160" href="index.html"><!-- simple frame --></a>
+    <a class="nonblock nontext grpelem" id="u1415" href="index.html"><!-- state-based BG images --></a>
     <a class="nonblock nontext clip_frame grpelem" id="u1178" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- image --><img class="block" id="u1178_img" src="images/fb-f-logo__blue_50.png" alt="" width="40" height="40"/></a>
     <a class="nonblock nontext clip_frame grpelem" id="u1180" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- image --><img class="block" id="u1180_img" src="images/goodreads_icon_30x30.png" alt="" width="40" height="40"/></a>
     <div class="clip_frame grpelem" id="u1182"><!-- image -->
@@ -92,6 +86,9 @@ var __adobewebfontsappname__ = "muse";
      <p>Web Design by Christopher Dolence</p>
     </div>
    </div>
+  </div>
+  <div class="preload_images">
+   <img class="preload" src="images/u1415-m.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
