--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4213895321"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?86156934" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?273650730"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?14780158" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -57,29 +57,29 @@ var __adobewebfontsappname__ = "muse";
      <a class="anchor_item grpelem" id="matthew"></a>
      <div class="grpelem" id="u977"><!-- simple frame --></div>
     </div>
-    <div class="clearfix colelem" id="u1218"><!-- group -->
-     <div class="clearfix grpelem" id="u907"><!-- group -->
-      <div class="rgba-background clearfix grpelem" id="u938"><!-- group -->
-       <nav class="MenuBar clearfix grpelem" id="menuu908"><!-- horizontal box -->
-        <div class="MenuItemContainer clearfix grpelem" id="u916"><!-- vertical box -->
-         <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u917" href="index.html#matthew"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u919-4"><!-- content --><p>Matthew</p></div></a>
+    <div class="clearfix colelem" id="u1497"><!-- group -->
+     <div class="clearfix grpelem" id="u1498"><!-- group -->
+      <div class="rgba-background clearfix grpelem" id="u1501"><!-- group -->
+       <nav class="MenuBar clearfix grpelem" id="menuu1502"><!-- horizontal box -->
+        <div class="MenuItemContainer clearfix grpelem" id="u1510"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1511" href="index.html#matthew"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1513-4"><!-- content --><p>Matthew</p></div></a>
         </div>
-        <div class="MenuItemContainer clearfix grpelem" id="u909"><!-- vertical box -->
-         <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u912" href="index.html#novels"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u913-4"><!-- content --><p>Novels</p></div></a>
+        <div class="MenuItemContainer clearfix grpelem" id="u1517"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1520" href="index.html#novels"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1521-4"><!-- content --><p>Novels</p></div></a>
         </div>
-        <div class="MenuItemContainer clearfix grpelem" id="u923"><!-- vertical box -->
-         <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u924" href="index.html#media"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u926-4"><!-- content --><p>Media</p></div></a>
+        <div class="MenuItemContainer clearfix grpelem" id="u1503"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1504" href="index.html#media"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1505-4"><!-- content --><p>Media</p></div></a>
         </div>
        </nav>
-       <a class="nonblock nontext clip_frame grpelem" id="u932" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- image --><img class="block" id="u932_img" src="images/fb-f-logo__blue_50.png" alt="" width="40" height="40"/></a>
-       <a class="nonblock nontext clip_frame grpelem" id="u930" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- image --><img class="block" id="u930_img" src="images/goodreads_icon_30x30.png" alt="" width="40" height="40"/></a>
-       <div class="clip_frame grpelem" id="u934"><!-- image -->
-        <img class="block" id="u934_img" src="images/mail.jpg" alt="" width="39" height="39"/>
+       <div class="shadow clip_frame grpelem" id="u1499"><!-- image -->
+        <img class="block" id="u1499_img" src="images/mail.jpg" alt="" width="39" height="39"/>
        </div>
       </div>
+      <a class="nonblock nontext grpelem" id="u1524" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- state-based BG images --></a>
+      <a class="nonblock nontext grpelem" id="u1526" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- state-based BG images --></a>
      </div>
-     <div class="clip_frame grpelem" id="u1202"><!-- image -->
-      <img class="block" id="u1202_img" src="images/matt-logo.png" alt="" width="220" height="40"/>
+     <div class="clip_frame grpelem" id="u1528"><!-- image -->
+      <img class="block" id="u1528_img" src="images/matt-logo.png" alt="" width="220" height="40"/>
      </div>
     </div>
     <div class="clearfix colelem" id="pu1049"><!-- group -->
@@ -185,6 +185,10 @@ var __adobewebfontsappname__ = "muse";
 
 </div>
    </div>
+  </div>
+  <div class="preload_images">
+   <img class="preload" src="images/u1524-m.png" alt=""/>
+   <img class="preload" src="images/u1526-m.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
