--- a/the-shade.html
+++ b/the-shade.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "the-shade.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "the-shade.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,9 +11,8 @@
   <title>The Shade</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4213895321"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?407598548"/>
-  <link rel="stylesheet" type="text/css" href="css/the-shade.css?240788174" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?3871083803"/>
+  <link rel="stylesheet" type="text/css" href="css/the-shade.css?4281403553" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -23,6 +22,9 @@ var __adobewebfontsappname__ = "muse";
   <script type="text/javascript">
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/double-pica-small-caps:n4:all.js" type="text/javascript">\x3C/script>');
 </script>
+  <!--[if lt IE 9]>
+  <script src="scripts/html5shiv.js?4241844378" type="text/javascript"></script>
+  <![endif]-->
    </head>
  <body>
 
@@ -35,9 +37,9 @@ var __adobewebfontsappname__ = "muse";
      <p>Back</p>
     </div>
     <a class="nonblock nontext grpelem" id="u1415" href="index.html"><!-- state-based BG images --></a>
-    <a class="nonblock nontext clip_frame grpelem" id="u1178" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- image --><img class="block" id="u1178_img" src="images/fb-f-logo__blue_50.png" alt="" width="40" height="40"/></a>
-    <a class="nonblock nontext clip_frame grpelem" id="u1180" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- image --><img class="block" id="u1180_img" src="images/goodreads_icon_30x30.png" alt="" width="40" height="40"/></a>
-    <div class="clip_frame grpelem" id="u1182"><!-- image -->
+    <a class="nonblock nontext grpelem" id="u1178" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- state-based BG images --></a>
+    <a class="nonblock nontext grpelem" id="u1180" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- state-based BG images --></a>
+    <div class="shadow clip_frame grpelem" id="u1182"><!-- image -->
      <img class="block" id="u1182_img" src="images/mail.jpg" alt="" width="39" height="39"/>
     </div>
    </div>
@@ -81,14 +83,16 @@ var __adobewebfontsappname__ = "muse";
    </div>
    <a class="nonblock nontext clip_frame colelem" id="u1187" href="http://www.amazon.com/The-Shade-Trilogy-Volume/dp/099161920X"><!-- image --><img class="block" id="u1187_img" src="images/amazon-logo_grey.png" alt="" width="207" height="100"/></a>
    <div class="verticalspacer"></div>
-   <div class="rgba-background rounded-corners clearfix colelem" id="u488"><!-- group -->
-    <div class="clearfix grpelem" id="u1414-4"><!-- content -->
+   <div class="rgba-background rounded-corners clearfix colelem" id="u1458"><!-- group -->
+    <div class="clearfix grpelem" id="u1459-4"><!-- content -->
      <p>Web Design by Christopher Dolence</p>
     </div>
    </div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u1415-m.png" alt=""/>
+   <img class="preload" src="images/u1178-m.png" alt=""/>
+   <img class="preload" src="images/u1180-m.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
