--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?273650730"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?14780158" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3916583436"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?4077937802" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -46,11 +46,13 @@ var __adobewebfontsappname__ = "muse";
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u889" href="index.html#media"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u891-4"><!-- content --><p>Media</p></div></a>
        </div>
       </nav>
-      <a class="nonblock nontext clip_frame" id="u897" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- image --><img class="block" id="u897_img" src="images/fb-f-logo__blue_50.png" alt="" width="40" height="40"/></a>
-      <a class="nonblock nontext clip_frame" id="u895" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- image --><img class="block" id="u895_img" src="images/goodreads_icon_30x30.png" alt="" width="40" height="40"/></a>
-      <div class="clip_frame" id="u899"><!-- image -->
+      <div class="shadow clip_frame" id="u899"><!-- image -->
        <img class="block" id="u899_img" src="images/mail.jpg" alt="" width="39" height="39"/>
       </div>
+     </div>
+     <div class="clearfix grpelem" id="ppu897"><!-- group -->
+      <a class="nonblock nontext" id="u897" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- state-based BG images --></a>
+      <a class="nonblock nontext" id="u895" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- state-based BG images --></a>
      </div>
     </div>
     <div class="clearfix colelem" id="pmatthew"><!-- group -->
@@ -187,6 +189,8 @@ var __adobewebfontsappname__ = "muse";
    </div>
   </div>
   <div class="preload_images">
+   <img class="preload" src="images/u897-m.png" alt=""/>
+   <img class="preload" src="images/u895-m.png" alt=""/>
    <img class="preload" src="images/u1524-m.png" alt=""/>
    <img class="preload" src="images/u1526-m.png" alt=""/>
   </div>
