Mouse Over Effects for everyone!
A-Master
+ Changed font color of both navs to a slight gray.
+ Added mouse over glow to site links on both navs.
+ Added mouse over glow to social links on both navs.
B-Master
+ Added mouse over glow to social links on nav.
+ Added mouse over glow to Back button on B-Master.
+ Moved Amazon link to B-Master.
+ Added mouse over glow to Amazon link.
Home
+ Added shadow to Novels section
+ Added mouse over shadow to Novels section

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3916583436"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?4077937802" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4238365547"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3978294544" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -189,9 +189,11 @@ var __adobewebfontsappname__ = "muse";
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u897-m.png" alt=""/>
-   <img class="preload" src="images/u895-m.png" alt=""/>
+   <img class="preload" src="images/u897-r.png" alt=""/>
+   <img class="preload" src="images/u895-r.png" alt=""/>
+   <img class="preload" src="images/u1524-r.png" alt=""/>
    <img class="preload" src="images/u1524-m.png" alt=""/>
+   <img class="preload" src="images/u1526-r.png" alt=""/>
    <img class="preload" src="images/u1526-m.png" alt=""/>
   </div>
   <!-- JS includes -->
