--- a/the-corrupt.html
+++ b/the-corrupt.html
@@ -11,8 +11,8 @@
   <title>The Corrupt</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?3871083803"/>
-  <link rel="stylesheet" type="text/css" href="css/the-corrupt.css?457932505" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?340137112"/>
+  <link rel="stylesheet" type="text/css" href="css/the-corrupt.css?3891971" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -81,8 +81,8 @@ var __adobewebfontsappname__ = "muse";
      </div>
     </div>
    </div>
-   <a class="nonblock nontext clip_frame colelem" id="u1248" href="http://www.amazon.com/The-Corrupt-Shade-Trilogy-Volume/dp/0991619234/ref=pd_rhf_dp_p_img_2?ie=UTF8&amp;refRID=1K0N0V8VA4YE0TDSHVS7"><!-- image --><img class="block" id="u1248_img" src="images/amazon-logo_grey.png" alt="" width="207" height="100"/></a>
    <div class="verticalspacer"></div>
+   <a class="nonblock nontext colelem" id="u1534" href="http://www.amazon.com/The-Shade-Trilogy-Volume/dp/099161920X"><!-- state-based BG images --></a>
    <div class="clearfix colelem" id="u1458"><!-- group -->
     <div class="clearfix grpelem" id="u1459-4"><!-- content -->
      <p>Web Design by Christopher Dolence</p>
@@ -90,9 +90,13 @@ var __adobewebfontsappname__ = "muse";
    </div>
   </div>
   <div class="preload_images">
+   <img class="preload" src="images/u1415-r.png" alt=""/>
    <img class="preload" src="images/u1415-m.png" alt=""/>
+   <img class="preload" src="images/u1178-r.png" alt=""/>
    <img class="preload" src="images/u1178-m.png" alt=""/>
+   <img class="preload" src="images/u1180-r.png" alt=""/>
    <img class="preload" src="images/u1180-m.png" alt=""/>
+   <img class="preload" src="images/u1534-r.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
